[gd_scene load_steps=4 format=3 uid="uid://cxb2tj7eiclu0"]

[ext_resource type="Script" path="res://UIObjects/AvalonMenu/WarriorMenus/WarriorSelectMenu/WarriorSelectionElement.gd" id="1_w6o0q"]
[ext_resource type="FontFile" uid="uid://cfesmr0va1fab" path="res://UIObjects/Assets/Fonts/VCR_OSD_MONO.ttf" id="2_sic1c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n406o"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="WarriorSelectionElement" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = -46.0
offset_bottom = 70.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_n406o")
script = ExtResource("1_w6o0q")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="WarriorNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sic1c")
theme_override_font_sizes/font_size = 20
text = "Legionnaire"
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_sic1c")
text = "Select"

[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectButton" to="." method="_on_button_pressed"]
